tooling/nargo_cli/tests/snapshots/execute__tests__as_witness_force_brillig_true_inliner_-9223372036854775808.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "2575368651360936635",
  "abi": {
    "parameters": [
      {
        "name": "a",
        "type": {
          "kind": "field"
        },
        "visibility": "private"
      }
    ],
    "return_type": {
      "abi_type": {
        "kind": "field"
      },
      "visibility": "public"
    },
    "error_types": {
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/7VTQQ6CMBAsUqPVaIxG39EGEI4e9CGNpO/g6dq4G8ZaudBOQpZ22cnM0Bbig4IeDwl7IXjvRlXPg0nIpYuIzkkTsYELVUV1Af0yoXEV0ZKKv9P1VYlfzwn1V4o4c+bDnBn49Yp47sPIH3rx2Invy4Eza+rz+x5mPB7AzfM5c3v/9yZzbuYk/me1pRwOsOZzKIf0etpuvPQl8S9BD0JCH78/03oDfrjKGTpda42rrLON7fv6aY8Bv4AMfU4vUlxh9IkFAAA=",
  "debug_symbols": "XYzBCoAgEET/Zc8dskOHfiUi1DZZEBXTIGT/PYUO4WXgzWOmwIEqm53c6S9Y1gLWa5nIu0qFB1CRrCWzd/UtI0ll8cMzO/2z6QnY7UP0Go8csT01B2MLUXMV8zCJjZk3fgE=",
  "file_map": {},
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
