tooling/nargo_cli/tests/snapshots/execute__tests__assert_constant_force_brillig_false_inliner_0.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "6637726240359334050",
  "abi": {
    "parameters": [
      {
        "name": "dynamic_one",
        "type": {
          "kind": "field"
        },
        "visibility": "private"
      },
      {
        "name": "dynamic_two",
        "type": {
          "kind": "field"
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {}
  },
  "bytecode": "H4sIAAAAAAAA/4XIQQoAAAgCQY3+/+aIAsGLc1qWOIRs93fZTwaZH5tuUAAAAA==",
  "debug_symbols": "XYxLCoAwDAXvkrUn8Coi0k9aAqEpsRWk9O5+cCFdzhveNPBoa9woBdlhXhqwOFNI0k2tT2CVmCluw3wYJWMZPww1uZ8tZ8bhn1Uc+qr4lF7X134B",
  "file_map": {},
  "names": [
    "main"
  ],
  "brillig_names": []
}
