tooling/nargo_cli/tests/snapshots/execute__tests__assert_force_brillig_false_inliner_0.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "10611977319187439816",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "field"
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {
      "10220664360449826677": {
        "error_kind": "fmtstring",
        "length": 33,
        "item_types": [
          {
            "kind": "boolean"
          }
        ]
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/6WOQQqAMAwELfigpEnazc2vWEz//wQRKgqiF+eysIdh0nSRpifnt4ylf/DdJVRUo+Zg4ZWyNxiptQIGG2zLEAkoqjev5KwS3M2lD9nRNn+0v7EDo/0phPQAAAA=",
  "debug_symbols": "TYxLCsMwDAXvonUWKaUUfJVSgj9yEBjZyHahmNy9SmggO80bNAMCur4uxDFXMK8BKXvbKLPSgPmYarG8U21WGpj7bQLkoMdzmyBSQjCPeXsrOKGUaF2uEZ0/Vsi6hH+Mnf3Ftm85zflfJHsMXXAvHU7zPw==",
  "file_map": {
    "50": {
      "source": "fn main(x: Field) {\n    assert(x == 1);\n    assert(1 == conditional(x as bool));\n}\n\nfn conditional(x: bool) -> Field {\n    assert(x, f\"Expected x to be true but got {x}\");\n    assert_eq(x, true, f\"Expected x to be true but got {x}\");\n    1\n}\n",
      "path": "/Users/asterite/Projects/noir/test_programs/execution_success/assert/src/main.nr"
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": []
}
