tooling/nargo_cli/tests/snapshots/execute__tests__assign_ex_force_brillig_true_inliner_0.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "8615093284103655749",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "field"
        },
        "visibility": "private"
      },
      {
        "name": "y",
        "type": {
          "kind": "field"
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/7VVvc7CMAx0aPN9BAQDiImJBcQWKH8jAzxIBOpz8OgowhauSRECx1KVVHbuLucmNfAIg0+MEscOvAbVHHH0v8VKEcvn1Gky6WyYbKA9KLfE0Yn1MV8obtgJXk38g9/sXGJ/ivorxzAz4K8Jv8yD7/8R53Rr4oPgHUDz8PI1lOPf2BlzXczTfIhzJ/By9J1r0vZtnNBPXH3c64z5wX2FN2tlv0FPc0VcFvEstPfbitqJ0PeXydcRwwXBBUJv5wMfjb6Pa8mV8tGIHNVOhb5c5zrlY9nijfadlboPQOjhUSRqqC6eowXOB4k6ij48/1XlTX9f+4P3xFcgvoVX7Zzfivo5vveEfurN8Uud9T6s6irUYRuu180lyN7HaLub4vsdJm+MHZ0JAAA=",
  "debug_symbols": "lZPBCoQgFEX/5a1b+LLM+pVhCCsLQSysBobo38eGBqJx8zbilXMeotwNOt2sQ21cP85QPTawY6sWM7qQtj2BxhtrzVBfj4EdC+Zffp6UO+K8KL9AlYkEtOugyjHYvbE6bNn+TABFjBfZyRfszhdEXhL5ksanjMhjjJd48lLc+TTGl+XJI8vvAqcKGVXIqYKgCtFPRuQ/g/89qyQbJdXgjGwgzdhDeilvVGP12bR+de2leMt70rcOTn5sdbd6fbTxUsTjtpwnXIaxYfQH",
  "file_map": {
    "50": {
      "source": "fn main(x: Field, y: Field) {\n    let mut z = x + y;\n    assert(z == 3);\n    z = x * y;\n    assert(z == 2);\n\n    regression_3057();\n}\n// Ensure parsing parenthesized lvalues works\nfn regression_3057() {\n    let mut array = [[0, 1], [2, 3]];\n    (array[0])[1] = 2;\n    assert(array[0][1] == 2);\n}\n",
      "path": "/Users/asterite/Projects/noir/test_programs/execution_success/assign_ex/src/main.nr"
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
